@@ -3,6 +3,7 @@ a1
 - Added plugin for plugin management (can load and unload plugins without restarting pychop)
 - Public commands can be disabled through configuration file
 - ?trigger command is supported
+- Hostbot support removed
 
 a0
 --
